Readme updated and swagger debugged
